--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - '8000:80'
     restart: always
-    volumes: ['./wp-content:/var/www/html/wp-content']
+    volumes: ['./:/var/www/html']
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
